tcr: April and June